// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton snapshots checked 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_checked css-43x8eg-SxRadioButton-root"
  >
    <input
      checked=""
      class="SxRadioButton-input css-1t9v770-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1vycm4y-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-3mtgan-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots default 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-ligi5k-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-r86qs6-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-nhzvrs-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots disableFocus 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_disableFocus css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-irpnfb-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-r86qs6-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-nhzvrs-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots disabled 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_disabled css-w2gy44-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-xlfk0t-SxRadioButton-input"
      disabled=""
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-14h345d-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-1kzafsd-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots hasError 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium SxRadioButton_hasError css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-xlfk0t-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1e7k5on-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-nhzvrs-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots large 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_large css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-ligi5k-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-1nhokxf-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-nhzvrs-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-k6soy6-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots medium 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_medium css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-ligi5k-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-r86qs6-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-nhzvrs-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-1rk6f29-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton snapshots small 1`] = `
<DocumentFragment>
  <label
    class="SxRadioButton SxRadioButton_size_small css-43x8eg-SxRadioButton-root"
  >
    <input
      class="SxRadioButton-input css-ligi5k-SxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="SxRadioButton-marker css-bhlb98-SxRadioButton-marker"
    >
      <div
        class="SxRadioButton-markerDot css-uvghps-SxRadioButton-markerDot"
      />
    </div>
    <div
      class="SxRadioButton-content css-3chyuq-SxRadioButton-content"
    >
      RadioButton
    </div>
  </label>
</DocumentFragment>
`;
